fix blogging mechanism so that it uses configurations from MinimalMistakes

--- a/blog_old/index.html
+++ b/blog_old/index.html
@@ -1,5 +1,8 @@
 ---
-layout: default
+layout: single
+title: Research
+permalink: /blog/
+author_profile: true
 ---
 
 <h4>Learner, Practitioner, Researcher, Educator</h4>
