--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
       <nav id="site-nav" class="greedy-nav">
         <a class="site-title" href="/lngo/">Research, Learn, Practice, Teach</a>
         <ul class="visible-links"><li class="masthead__menu-item">
-              <a href="/lngo/about/" >About</a>
+              <a href="/about/" >About</a>
             </li><li class="masthead__menu-item">
-              <a href="/lngo/research/" >Research</a>
+              <a href="/research/" >Research</a>
             </li><li class="masthead__menu-item">
               <a href="/lngo/publications/" >Publications</a>
             </li><li class="masthead__menu-item">
